--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -1,4 +1,7 @@
 <main class="homepage">
   <h2>StackOverflow Tagger</h2>
   <p>REMLA 2022 project (<a routerLink="/credits">credits</a>)</p>
+  <mat-card>
+    <app-inference-form></app-inference-form>
+  </mat-card>
 </main>
