Integration between backend and the GUI

--- a/frontend/src/app/components/inference-form/components/tags-input/tags-input.component.html
+++ b/frontend/src/app/components/inference-form/components/tags-input/tags-input.component.html
@@ -1,6 +1,6 @@
 <mat-form-field class="tags-form-field" appearance="outline">
   <mat-label>Tags</mat-label>
-  <mat-chip-list #tagChipList>
+  <mat-chip-list #tagChipList [disabled]="disabled">
     <mat-chip *ngFor="let tag of tags" (removed)="remove(tag)">
       {{tag}}
       <button matChipRemove>
@@ -10,6 +10,7 @@
   </mat-chip-list>
   <input placeholder="New tag..."
          [(ngModel)]="newTag"
+         [disabled]="disabled"
          [matChipInputFor]="tagChipList"
          [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
          (matChipInputTokenEnd)="add()">
