Updated README and added Angular linting

--- a/frontend/src/app/components/inference-form/inference-form.component.html
+++ b/frontend/src/app/components/inference-form/inference-form.component.html
@@ -3,25 +3,25 @@
     <mat-form-field class="title-form-field" appearance="outline">
       <mat-label>Title</mat-label>
       <input matInput type="text"
-             [disabled]="processedTitle != ''"
+             [disabled]="processedTitle !== ''"
              [(ngModel)]="title">
     </mat-form-field>
   </div>
   <div class="form-button">
     <button mat-raised-button color="primary"
-            [disabled]="processedTitle != ''"
+            [disabled]="processedTitle !== ''"
             (click)="query()">Query
     </button>
   </div>
   <div class="form-input">
       <app-tags-input
-                  [disabled]="processedTitle == ''"
+                  [disabled]="processedTitle === ''"
                   [(tags)]="tags"
                   [(newTag)]="newTag"></app-tags-input>
   </div>
   <div class="form-button">
       <button mat-button  color="primary"
-          [disabled]="processedTitle == ''"
+          [disabled]="processedTitle === ''"
           (click)="submitFeedback()">Submit feedback
   </button>
   </div>
